--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
             </div>
             <div class="container">
                 <h2>explanitions of Responsibilities</h2>
-                <style></style>
+                <style>
+                    .progress1{
+                        background-color: rgba(10, 121, 168, 0.547);
+                    }
+                </style>
                 <p>As consumers it is our duty to be more observant and curious about the price and worth of goods
                     and services, It is our duty to evaluate and do something to ensure that we get a fair-deal,As consumers we should be conscious of the effect of our consumption on other people,
                     especially the poor or weak groups whether in the neighborhood or globally.</p>
